# VibgyorSeek

./: LICENSE  README.md
monitoring-client/: ANTIVIRUS_WHITELIST.md  BUILD_NOTES.md  DEPLOYMENT_GUIDE.md  INSTALLATION.md  INSTALLER_FEATURES.md  Manage-VibgyorSeek.ps1  NSSM_DEPLOYMENT.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  REBUILD_INSTRUCTIONS.md  REBUILD_NOW.bat  SERVICE_SESSION_FIX.md  VibgyorSeekMonitoring_Hidden.vbs  VibgyorSeekMonitoring_TaskScheduler.iss  VibgyorSeekMonitoring_TaskScheduler_VBS.iss  WINDOWLESS_MODE.md  build.bat  check_and_start.bat  fix_working_directory.bat  install_service_nssm.bat  install_task_scheduler.bat  main.py  monitoring_client.spec  requirements.txt  setup.bat  uninstall_service_nssm.bat  uninstall_task_scheduler.bat
monitoring-client-rust/: ACTIVITY_TRACKER_REDESIGN.md  BACKGROUND_MODE.md  BROWSER_TAB_FIX.md  BROWSER_TAB_SOLUTION.md  BUILD_REQUIREMENTS.md  CHANGELOG.md  CONFIG_WATCHER_UPDATE.md  Cargo.toml  DESIGN.md  DYNAMIC_CONFIG_UPDATE.md  IDLE_AND_BROWSER_FIXES.md  LOG_FILE_UPDATE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REQUIREMENTS.md  SCREENSHOT_IMPLEMENTATION.md  SCREENSHOT_QUICK_REFERENCE.md  TASK-001-COMPLETION.md  TASK-002-COMPLETION.md  TASK-003-SUMMARY.md  TASK-004-SUMMARY.md  TASK-005-SUMMARY.md  TASK-006-SUMMARY.md  TASK-008-SUMMARY.md  TASK-009-SUMMARY.md  TASKS.md  build_errors.txt
monitoring-client-rust/docs/: CONFIG_MODULE.md  LOCATION_TRACKER.md  LOGGING_GUIDE.md  PAYLOAD_BUILDER.md
monitoring-client-rust/examples/: active_browser_tab.rs  browser_tabs_demo.rs  config_demo.rs  location_demo.rs  logging_demo.rs  payload_demo.rs  queue_demo.rs
monitoring-client-rust/src/: lib.rs  main.rs
monitoring-client-rust/src/modules/: activity_tracker.rs  app_monitor.rs  browser_monitor.rs  config.rs  config_watcher.rs  error.rs  file_sync_manager.rs  http_transmitter.rs  location_tracker.rs  logger.rs  mod.rs  payload_builder.rs  queue_manager.rs  retry_manager.rs  screenshot.rs  types.rs
monitoring-client-rust/tests/: activity_tracker_test.rs  app_monitor_test.rs  browser_monitor_integration_test.rs  browser_monitor_test.rs  config_test.rs  config_watcher_integration_test.rs  file_sync_manager_integration_test.rs  http_transmitter_integration_test.rs  location_tracker_integration_test.rs  logger_integration_test.rs  payload_builder_integration_test.rs  queue_manager_integration_test.rs  retry_manager_integration_test.rs
monitoring-dashboard/: .env.example  EMPLOYEE_ID_ENDPOINT.md  EMPLOYEE_SELF_VIEW.md  EMPLOYEE_SELF_VIEW_EXAMPLES.md  EMPLOYEE_SELF_VIEW_FINAL.md  EMPLOYEE_SELF_VIEW_INTEGRATION.md  EMPLOYEE_SELF_VIEW_UPDATED.md  QUICK_REFERENCE.md  README.md  (+9 more)
(+171 files in other folders)
