[package]
name = "monitoring-client"
version = "1.0.0"
edition = "2021"
authors = ["VibgyorSeek Team"]
description = "Employee monitoring client for VibgyorSeek system"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "chrono"] }
tracing-appender = "0.2"

# Configuration
dotenv = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.21"

# Image processing
image = "0.24"

# Screenshot capture
screenshots = "0.7"

# System information
sysinfo = "0.30"

# File system watching
notify = "6.1"

# LZ4 compression (for Firefox session files)
lz4 = "1.24"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# Atomic operations
parking_lot = "0.12"

# Path utilities
directories = "5.0"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
] }
uiautomation = { version = "0.19", features = ["control"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1

[lib]
name = "monitoring_client"
path = "src/lib.rs"

[[bin]]
name = "monitoring-client"
path = "src/main.rs"

# Windows-specific configuration to hide console window
[target.'cfg(windows)'.build-dependencies]

# This tells Windows to run as a GUI app (no console window)
[package.metadata.winres]
OriginalFilename = "monitoring-client.exe"
FileDescription = "VibgyorSeek Monitoring Client"
ProductName = "VibgyorSeek Monitoring"
CompanyName = "VibgyorSeek"
